contact.html - ok, info.html need media query, cv pdf added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
       href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    /> -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/menu.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -61,34 +57,8 @@
           <h1 class="hero__logo">ARY VIDOT</h1>
           <h2 class="hero__description">Front-end Web Developer</h2>
 
-          <a href="contact-form.html" class="btn">GET IN TOUCH</a>
+          <a href="contact-form.html" class="hero-btn">GET IN TOUCH</a>
         </div>
-
-        <!-- <section class="social">
-          <ul class="social__list">
-            <li class="social__list">
-              <a
-                class="social__list-link"
-                href="https://github.com/AryVidot"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="build/assets/logo/github.svg" alt="GitHub logo"
-              /></a>
-            </li>
-            <li class="social__link">
-              <a
-                class="social__list-link"
-                href="https://www.instagram.com/ary.vidot_dev/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  src="build/assets/logo/instagram.svg"
-                  alt="Instagram logo"
-              /></a>
-            </li>
-          </ul>
-        </section> -->
       </section>
     </main>
     <footer>
