--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
     />
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/menu.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/portfolio.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/portfolio.css" />
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -49,6 +49,19 @@
             <p class="intro__text">
               I've been working on the following projects.
             </p>
+            <div class="grid-container">
+              <div class="col-1">
+                <picture><h3>HOLDER1</h3></picture>
+              </div>
+              <div class="col-2">
+                <picture><h3>HOLDER2</h3></picture>
+              </div>
+              <div class="col-3">
+                <picture><h3>HOLDER3</h3></picture>
+              </div>
+
+            </div>
+            
           </section>
         </div>
         <div class="content">
