--- a/contact-form.html
+++ b/contact-form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ary Vidot - FORM/</title>
+    <title>ARY VIDOT - FORM/</title>
     <link
       rel="icon"
       type="image/png"
@@ -15,10 +15,10 @@
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/menu.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/form.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/form.css" />
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -46,57 +46,60 @@
 
     <main>
       <section class="ctnr">
-        <section class="form">
-          <form
-            action="mailto:aryvidot.dev@gmail.com"
-            method="post"
-            enctype="text/plain"
-          >
-            <div class="intro">
-              <div class="intro__content">
-                <h2 class="intro__title">CONTACT</h2>
-                <!-- <img src="/assets/img/Smile-LG.jpg" alt="Ary Smile photo" /> -->
+        <div class="intro">
+          <div class="intro__content">
+            <h2 class="intro__title">CONTACT</h2>
+          </div>
+          <div>
+            <p>Don't be shy and say hello!</p>
+            <p>We can meet for a coffee and see how we can work together.</p>
+            <p style="display: none">
+              Why not checking my <a href="#">Aeropress Receipe App</a> and send
+              your details over.
+            </p>
+          </div>
+        </div>
+
+        <div class="form">
+          <section class="contact-1">
+            <h3 class="contact__title">Try out the form I created below...</h3>
+            <form
+              action="mailto:aryvidot.dev@gmail.com"
+              method="post"
+              enctype="text/plain"
+            >
+              <div class="name">
+                <input type="text" name="name" required />
+                <label for="name" class="form__label">Name</label>
               </div>
-              <p>Don't be shy and say hello!</p>
-              <p>We can meet for a coffee and see how we can work together.</p>
-              <p>Try out the form I created below...</p>
-              <p style="display: none">
-                Why not checking my <a href="#">Aeropress Receipe App</a> and
-                send your details over.
-              </p>
-            </div>
+              <div class="email">
+                <input type="email" name="email" autocomplete="off" required />
+                <label for="email" class="form__label">Email</label>
+              </div>
+              <div class="subject">
+                <input type="text" name="subject" required />
+                <label for="subject" class="form__label">Subject</label>
+              </div>
+              <div class="message">
+                <textarea
+                  name="message"
+                  id=""
+                  cols="30"
+                  rows="5"
+                  required
+                ></textarea>
+                <label for="message" class="form__label">Message</label>
+              </div>
+              <div class="form-btn">
+                <input type="submit" name="submit" value="submit" />
+              </div>
+            </form>
+          </section>
 
-            <div class="name">
-              <input type="text" name="name" required />
-              <label for="name" class="form__label">Name</label>
-            </div>
-            <div class="email">
-              <input type="email" name="email" autocomplete="off" required />
-              <label for="email" class="form__label">Email</label>
-            </div>
-            <div class="subject">
-              <input type="text" name="subject" required />
-              <label for="subject" class="form__label">Subject</label>
-            </div>
-            <div class="message">
-              <textarea
-                name="message"
-                id=""
-                cols="30"
-                rows="10"
-                required
-              ></textarea>
-              <label for="message" class="form__label">Message</label>
-            </div>
-            <div class="form-btn">
-              <input type="submit" name="submit" value="submit" />
-            </div>
-          </form>
-        </section>
-
-        <section class="contact">
-          <section class="contact__direct">
+          <section class="contact-2">
             <h3 class="contact__title">Or Contact Me Directly...</h3>
+            <img class="img" src="/assets/img/Smile-MD.jpg" alt="Ary photo" />
+
             <ul class="contact__list">
               <li class="contact__list-link">
                 <a href="https://wa.me/347896512788"
@@ -137,16 +140,27 @@
               </li>
             </ul>
           </section>
-        </section>
+        </div>
       </section>
     </main>
+
+    <footer>
+      <div class="copyright">
+        <p>
+          <span class="year">2020</span> -
+          <a href="index.html" target="_blank">Ary Vidot </a
+          ><span class="dot">.</span> All rights reserved
+        </p>
+      </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
       crossorigin="anonymous"
@@ -155,7 +169,7 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script src="app.js"></script>
   </body>
 </html>
