Coming soon page added

--- a/contact-form.html
+++ b/contact-form.html
@@ -110,11 +110,10 @@
             </ul>
           </section>
 
-          <section class="contact-2">
+          <!-- <section class="contact-2">
             <h3 class="contact__title">
               Or try out the form I created below...
             </h3>
-            <!-- @TODO - validation -->
             <form id="contactForm">
               <div class="name">
                 <input id="name" type="text" name="name" required />
@@ -149,7 +148,7 @@
                 <button id="submit">Submit</button>
               </div>
             </form>
-          </section>
+          </section> -->
         </div>
       </section>
     </main>
