--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,13 @@
         <div class="intro">
           <section class="intro__content">
             <h1 class="intro__title">PORTFOLIO</h1>
-            <p class="intro__text">
+            <h2 class="comingSoon">Coming soon...</h2>
+            <p class="intro__text" style="display: none;">
               I've been working on the following projects.
             </p>
             
           </section>
-          <section>
+          <section style="display: none;">
             <div class="grid-container">
               <div class="col-1">
                 <picture><h3>HOLDER1</h3></picture>
