--- a/contact-form.html
+++ b/contact-form.html
@@ -10,11 +10,16 @@
       href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <script src="https://use.fontawesome.com/0148eaae50.js"></script>
     <link
       rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    /> -->
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/form.css" />
@@ -34,7 +39,7 @@
   </head>
   <body>
     <header class="nav">
-      <nav class="menu-opener">
+      <nav class="menu-opener" onclick="">
         <div class="menu-opener-inner"></div>
       </nav>
       <nav class="menu">
@@ -110,11 +115,11 @@
             </ul>
           </section>
 
-          <!-- <section class="contact-2">
+          <section class="contact-2">
             <h3 class="contact__title">
               Or try out the form I created below...
             </h3>
-            <form id="contactForm">
+            <form id="contactForm" method="POST" name="contact" netlify>
               <div class="name">
                 <input id="name" type="text" name="name" required />
                 <label for="name" class="form__label">Name</label>
@@ -144,11 +149,12 @@
                   >Message</label
                 >
               </div>
+              <div data-netlify-recaptcha="true"></div>
               <div class="form-btn">
-                <button id="submit">Submit</button>
+                <button id="submit">Send</button>
               </div>
             </form>
-          </section> -->
+          </section>
         </div>
       </section>
     </main>
