--- a/contact-form.html
+++ b/contact-form.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
     /> -->
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/form.css" />
@@ -55,25 +56,18 @@
 
     <main>
       <section class="ctnr">
-        <div class="intro">
-          <div class="intro__content">
-            <h2 class="intro__title">CONTACT</h2>
-          </div>
-          <div>
-            <p>Don't be shy and say hello!</p>
-            <p>We can meet for a coffee and see how we can work together.</p>
-            <p style="display: none">
-              Why not checking my <a href="#">Aeropress Receipe App</a> and send
-              your details over.
-            </p>
-          </div>
+        <div class="title">
+          <h2 class="page__title">CONTACT</h2>
         </div>
 
-        <div class="form">
+        <div class="wrapper">
           <section class="contact-1">
             <h3 class="contact__title">Contact Me Directly...</h3>
-            <img class="img" src="/assets/img/Smile-MD.jpg" alt="Ary photo" />
+            <p>Don't be shy and say hello!</p>
+            <p>We can meet for a coffee and see how we can work together.</p>
+            <br />
 
+            <img class="img" src="/assets/img/Smile-MD.jpg" alt="Ary photo" />
             <ul class="contact__list">
               <li class="contact__list-link">
                 <a href="https://wa.me/347896512788"
@@ -115,46 +109,50 @@
             </ul>
           </section>
 
-          <section class="contact-2">
-            <h3 class="contact__title">
-              Or try out the form I created below...
-            </h3>
-            <form id="contactForm" method="POST" name="contact" netlify>
-              <div class="name">
-                <input id="name" type="text" name="name" required />
-                <label for="name" class="form__label">Name</label>
+          <div class="form">
+            <section class="contact-2">
+              <h3 class="contact__title">
+                Or try out the form I created below...
+              </h3>
+              <div>
+                <form id="contactForm" method="POST" name="contact" netlify>
+                  <div class="name">
+                    <input id="name" type="text" name="name" required />
+                    <label for="name" class="form__label">Name</label>
+                  </div>
+                  <div class="email">
+                    <input
+                      id="email"
+                      type="email"
+                      name="email"
+                      autocomplete="off"
+                      required
+                    />
+                    <label for="email" class="form__label">Email</label>
+                  </div>
+                  <div class="subject">
+                    <input id="subject" type="text" name="subject" required />
+                    <label for="subject" class="form__label">Subject</label>
+                  </div>
+                  <div class="message">
+                    <textarea
+                      name="message"
+                      id="message"
+                      rows="5"
+                      required
+                    ></textarea>
+                    <label id="message" for="message" class="form__label"
+                      >Message</label
+                    >
+                  </div>
+                  <div data-netlify-recaptcha="true"></div>
+                  <div class="form-btn">
+                    <button id="submit">Send</button>
+                  </div>
+                </form>
               </div>
-              <div class="email">
-                <input
-                  id="email"
-                  type="email"
-                  name="email"
-                  autocomplete="off"
-                  required
-                />
-                <label for="email" class="form__label">Email</label>
-              </div>
-              <div class="subject">
-                <input id="subject" type="text" name="subject" required />
-                <label for="subject" class="form__label">Subject</label>
-              </div>
-              <div class="message">
-                <textarea
-                  name="message"
-                  id="message"
-                  rows="5"
-                  required
-                ></textarea>
-                <label id="message" for="message" class="form__label"
-                  >Message</label
-                >
-              </div>
-              <div data-netlify-recaptcha="true"></div>
-              <div class="form-btn">
-                <button id="submit">Send</button>
-              </div>
-            </form>
-          </section>
+            </section>
+          </div>
         </div>
       </section>
     </main>
