portfolio page added, need to add other projects

--- a/info.html
+++ b/info.html
@@ -62,13 +62,9 @@
                     <p class="info__text">
                       I decided to retrain and change career after spending more than 10 years in the photography industry advising photographers and photographer's assistants on the best equipment to fulfill their creativity purpose.</p><br>
                     <p class="info__text">
-                      I recently discover the beauty of <strong>React.js</strong> and fell in love. I aim to become a full-stack developer.
+                      I recently discover the beauty of <strong>React.js</strong> and have been <em>hook</em>ed. I aim to become a full-stack developer.
                     </p><br>
                     <p>In my spare time, I love playing Lego blocs with my son, having a picnic with my daughter and spending time with my wife. </p><br>
-                    <p class="info__text">
-                      Right now, I'm looking for a full-time position while perfecting
-                      my skills.
-                    </p>
                   </div>
               </div>
             </section>
@@ -96,10 +92,20 @@
   
               <section class="info-2">
                     <h3 class="info__title">Career Statement</h3>
-                    <p>I’m  seeking a career where I can be  at my most creative; a way to express myself, not only a “<em>job</em>”.</p><br>
-                    <p>My biggest strength is quickly understanding my client’s vision and finding the best tools available to make it a reality.</p><br>
-                    <p>Also, my personable nature and energy through which I foster close working relationships with my colleagues and clients.</p><br>
-              </section>
+                    <div class="quote">
+
+                      <p>I’m  seeking a career where I can be  at my most creative; a way to express myself, not only a “<em>job</em>”.</p><br>
+                      <p>My biggest strength is quickly understanding my client’s vision and finding the best tools available to make it a reality.</p><br>
+                      <p>Also, my personable nature and energy through which I foster close working relationships with my colleagues and clients.</p>
+                    </div>
+                    <br>
+                    <br>
+              <p class="info__text">
+                Right now, I'm looking for a full-time position while perfecting
+                my skills.
+              </p>
+
+                  </section>
               
               <section class="download">
                 <a class="download__cv" href="assets/doc/Ary_Vidot_CV_2020.pdf" target="_blank">DOWNLOAD CV</a>
