Portfolio title centre for mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,9 @@
 
             <div class="card">
               <img src="assets/img/project-img/pixabay-414630-LG.jpg" alt="magic8 ball game thumb" class="card__image">
-              <h2 class="card__title">Brewing?</h2>
-              <p>Placeholder generator</p>
+              <h2 class="card__title">Brewing...</h2>
+              <p>Text Placeholder generator</p>
+              <p>Random Toys App</p>
               <a class="link" href="#" target="_blank"></a>
               <div class="card__link"></div>
             </div>
