--- a/info.html
+++ b/info.html
@@ -56,15 +56,15 @@
               <div class="intro__content">
                   <img class="img" src="assets/img/jacket-no-glasses.jpg" width=600px alt="Ary photo"></img>
                   <div>
-                    <p class="info__text">Hi, my name is Ary.</p><br>
+                    <p class="info__text">Hi, I'm Ary.</p><br>
                     <p class="info__text">
-                      I write code, have always a new project idea in mind. I am also a husband & father who loves spending time cooking.</p><br>
+                      I write code, I always have a new project on the go. I am a husband & father who loves cooking.</p><br>
                     <p class="info__text">
-                      I decided to retrain and change career after spending more than 10 years in the photography industry advising photographers and photographer's assistants on the best equipment to fulfill their creativity purpose.</p><br>
+                      I decided to retrain and change career after more than 10 years in the photography industry, where I was advising photographers on the best equipment available to achieve their creative vision.</p><br>
                     <p class="info__text">
-                      I recently discover the beauty of <strong>React.js</strong> and have been <em>hook</em>ed. I aim to become a full-stack developer.
+                      I recently discovered the beauty of <strong>React.js</strong> and have been <em>hook</em>ed. My dream job would be as a full-stack developer.
                     </p><br>
-                    <p>In my spare time, I love playing Lego blocs with my son, having a picnic with my daughter and spending time with my wife. </p><br>
+                    <p>In my spare time, I love playing Lego with my son, having teddy bear picnics with my daughter and spending time with my wife. </p><br>
                   </div>
               </div>
             </section>
@@ -94,16 +94,16 @@
                     <h3 class="info__title">Career Statement</h3>
                     <div class="quote">
 
-                      <p>I’m  seeking a career where I can be  at my most creative; a way to express myself, not only a “<em>job</em>”.</p><br>
+                      <p>I’m seeking a role where I can be at my most creative; a way to express myself, not only a “<em>9 to 5</em>”.</p><br>
                       <p>My biggest strength is quickly understanding my client’s vision and finding the best tools available to make it a reality.</p><br>
-                      <p>Also, my personable nature and energy through which I foster close working relationships with my colleagues and clients.</p>
+                      <p>I'm very sociable and easy to talk to which helps me build close working relationships with my colleagues and clients.</p>
                     </div>
                     <br>
                     <br>
               <p class="info__text">
-                Right now, I'm looking for a full-time position while perfecting
-                my skills.
+                Right now, I'm looking for a full-time position where I can continue to build my skill-set.
               </p>
+              <br>
 
                   </section>
               
