meta added to index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
               <img src="assets/img/project-img/mbakes-LG.JPG" alt="baking website thumb" class="card__image">
               <h2 class="card__title">React Website</h2>
               <p>Built with React.js</p>
-              <a class="link" href="https://av-mbakes.netlify.app/" target="_blank"></a>
+              <a class="link" href="https://av-mbakes.netlify.app/" target="_blank" rel="noopener noreferrer"></a>
               <div class="card__link"></div>
             </div>
 
@@ -64,7 +64,7 @@
               <img src="assets/img/project-img/magic8-LG.JPG" alt="magic8 ball game thumb" class="card__image">
               <h2 class="card__title">JS Game</h2>
               <p>Built with Vanilla Javascript & jQuery</p>
-              <a class="link" href="https://av-magic8ball.netlify.app/" target="_blank"></a>
+              <a class="link" href="https://av-magic8ball.netlify.app/" target="_blank" rel="noopener noreferrer"></a>
               <div class="card__link"></div>
             </div>
 
@@ -72,7 +72,7 @@
               <img src="assets/img/project-img/weatherApp-LG.JPG" alt="magic8 ball game thumb" class="card__image">
               <h2 class="card__title">React Weather App</h2>
               <p>Built with React.js <br> and<br> access to API</p>
-              <a class="link" href="#" target="_blank"></a>
+              <a class="link" href="https://github.com/AryVidot/weatherReact" target="_blank" rel="noopener noreferrer"></a>
               <div class="card__link"></div>
             </div>
 
@@ -81,7 +81,7 @@
               <h2 class="card__title">Brewing...</h2>
               <p>Text Placeholder generator</p>
               <p>Random Toys App</p>
-              <a class="link" href="#" target="_blank"></a>
+              <!-- <a class="link" href="#" rel="noopener noreferrer"></a> -->
               <div class="card__link"></div>
             </div>
 
