--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>ARY VIDOT - Front-End Developer</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="This is an example of a meta description. 
+This will often show up in search results."
+    />
+    <meta name="”robots”" content="index, follow" />
     <link
       rel="icon"
       type="image/png"
