more meta added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="This is an example of a meta description. 
-This will often show up in search results."
+      content="Ary Vidot is a Front-end Developer, codes responsive web application. He uses Vanilla Javascript, jQuery, css, React.js, Node.js, Express and more."
+    />
+    <meta
+      name="keywords"
+      content="Ary Vidot, Front-End, frontend, Developer, html, html5, responsiveavailable, remote, full-time, fulltime, code, coding, IT, CSS, css3, sass, javascript, Vanilla, React, Git, Github, react.js, bootstrap, node, node.js, express, wordPress, cpanel, cdn, coder, skills, cv, download, portfolio, contact, game, app, application, software development"
     />
     <meta name="”robots”" content="index, follow" />
     <link
