cv updated version loaded

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="Ary Vidot, Front-End, frontend, Developer, html, html5, responsiveavailable, remote, full-time, fulltime, code, coding, IT, CSS, css3, sass, javascript, Vanilla, React, Git, Github, react.js, bootstrap, node, node.js, express, wordPress, cpanel, cdn, coder, skills, cv, download, portfolio, contact, game, app, application, software development"
     />
-    <meta name="”robots”" content="index, follow" />
+    <meta name="robots" content="index, nofollow" />
     <link
       rel="icon"
       type="image/png"
