Removed hero Video, added text-shadow on hero logo, updated green color

--- a/contact-form.html
+++ b/contact-form.html
@@ -64,7 +64,10 @@
           <section class="contact-1">
             <h3 class="contact__title">Contact Me Directly...</h3>
             <p>Don't be shy and say hello!</p>
-            <p>We can meet for a coffee and see how we can work together.</p>
+            <p>
+              We can meet for a coffee, discuss how we can work together and
+              stay safe.
+            </p>
             <br />
 
             <img class="img" src="/assets/img/Smile-MD.jpg" alt="Ary photo" />
