--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <section class="hero ctnr">
-        <div class="hero__video">
+        <!-- <div class="hero__video">
           <video
             src="assets/vid/BoatInSea_1937807.mp4"
             id="hero-vid"
@@ -59,7 +59,7 @@
             loop
             muted
           ></video>
-        </div>
+        </div> -->
         <div class="hero__overlay"></div>
 
         <div class="hero__content">
