Added update: new website coming

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,9 @@
           <h2 class="page__title">PORTFOLIO</h2>
         </div>
         <div class="portfolio__intro">
-          <p>See some of my projects below</p>
+          <p>See some of my projects below.</p>
+          <br>
+          <p>I'm working at the moment on my new website using React.js.</p>
           <br>
         </div>
 
