Made changes to Portfolio Crad: Brewing

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,10 @@
       href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -22,7 +25,6 @@
         yrSpan.textContent = currentYear;
       });
     </script>
-
   </head>
   <body>
     <header class="nav">
@@ -47,54 +49,90 @@
         </div>
         <div class="portfolio__intro">
           <p>See some of my projects below.</p>
-          <br>
-          <p>I'm working at the moment on my new website using React.js.</p>
-          <br>
+          <br />
+          <p>
+            I'm working at the moment on my new website using
+            <em>React.js</em> and other <em>commercial projects</em>.
+          </p>
+          <br />
         </div>
-
         <div class="portfolio__grid">
           <div class="card-wrapper">
             <div class="card">
-              <img src="assets/img/project-img/mbakes-LG.JPG" alt="baking website thumb" class="card__image">
+              <img
+                src="assets/img/project-img/mbakes-LG.JPG"
+                alt="baking website thumb"
+                class="card__image"
+              />
               <h2 class="card__title">React Website</h2>
               <p>Built with React.js</p>
-              <a class="link" href="https://av-mbakes.netlify.app/" target="_blank" rel="noopener noreferrer"></a>
+              <a
+                class="link"
+                href="https://av-mbakes.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
               <div class="card__link"></div>
             </div>
 
             <div class="card">
-              <img src="assets/img/project-img/magic8-LG.JPG" alt="magic8 ball game thumb" class="card__image">
-              <h2 class="card__title">JS Game</h2>
-              <p>Built with Vanilla Javascript & jQuery</p>
-              <a class="link" href="https://av-magic8ball.netlify.app/" target="_blank" rel="noopener noreferrer"></a>
+              <img
+                src="assets/img/project-img/LexiPersonalLifeCoach-Med.jpg"
+                alt="Lexi Personal Life Coach thumbnail"
+                class="card__image"
+              />
+              <h2 class="card__title">Commercial</h2>
+              <p>
+                Website built with html, Sass CSS compiler & Vanilla Javascript
+              </p>
+              <a
+                class="link"
+                href="https://lexipearson-personalcoach.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
               <div class="card__link"></div>
             </div>
 
             <div class="card">
-              <img src="assets/img/project-img/weatherApp-LG.JPG" alt="magic8 ball game thumb" class="card__image">
+              <img
+                src="assets/img/project-img/weatherApp-LG.JPG"
+                alt="magic8 ball game thumb"
+                class="card__image"
+              />
               <h2 class="card__title">React Weather App</h2>
-              <p>Built with React.js <br> and<br> access to API</p>
-              <a class="link" href="https://github.com/AryVidot/weatherReact" target="_blank" rel="noopener noreferrer"></a>
+              <p>
+                Built with React.js <br />
+                and<br />
+                access to API
+              </p>
+              <a
+                class="link"
+                href="https://github.com/AryVidot/weatherReact"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
               <div class="card__link"></div>
             </div>
 
             <div class="card">
-              <img src="assets/img/project-img/pixabay-414630-LG.jpg" alt="magic8 ball game thumb" class="card__image">
+              <img
+                src="assets/img/project-img/MindFullCreation-Small.jpg"
+                alt="MindFullCreation thumbnail"
+                class="card__image"
+              />
               <h2 class="card__title">Brewing...</h2>
-              <p>Text Placeholder generator</p>
-              <p>Random Toys App</p>
+              <p>Artiste's website using Sanity headless CMS, react.js</p>
               <!-- <a class="link" href="#" rel="noopener noreferrer"></a> -->
               <div class="card__link"></div>
             </div>
-
           </div>
         </div>
-  </div>
-
-
-
+        <div class="portfolio-btn">
+          <a href="contact-form.html" class="hero-btn">GET IN TOUCH</a>
+        </div>
       </section>
-    <main/>
+    </main>
     <footer>
       <div class="copyright">
         <p>
@@ -107,10 +145,22 @@
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
-    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
+      integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="/js/menu.js"></script>
   </body>
 </html>
