Added link to The Mindfull creation instagram on Brewing card

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,12 @@
               />
               <h2 class="card__title">Brewing...</h2>
               <p>Artiste's website using Sanity headless CMS, react.js</p>
-              <!-- <a class="link" href="#" rel="noopener noreferrer"></a> -->
+              <a
+                class="link"
+                href="https://www.instagram.com/themindfullcreation/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
               <div class="card__link"></div>
             </div>
           </div>
