Added new card - Sunnyside Agency Landing page

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                 class="card__image"
               />
               <h2 class="card__title">React Website</h2>
-              <p>Built with React.js</p>
+              <p>Built with React.js, React-bootstrap</p>
               <a
                 class="link"
                 href="https://av-mbakes.netlify.app/"
@@ -88,6 +88,25 @@
               <a
                 class="link"
                 href="https://lexipearson-personalcoach.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+              <div class="card__link"></div>
+            </div>
+
+            <div class="card">
+              <img
+                src="assets/img/project-img/SunnysideAgency-Small.jpg"
+                alt="Sunnyside Agency thumbnail"
+                class="card__image"
+              />
+              <h2 class="card__title">Marketing Agency Landing Page</h2>
+              <p>
+                Website built with html, Sass CSS compiler & Vanilla Javascript
+              </p>
+              <a
+                class="link"
+                href="https://av-sunnyside-agency-lp.netlify.app/"
                 target="_blank"
                 rel="noopener noreferrer"
               ></a>
