Corrected wording in porfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 alt="baking website thumb"
                 class="card__image"
               />
-              <h2 class="card__title">React Website</h2>
+              <h2 class="card__title">Small Businesses</h2>
               <p>Built with React.js, React-bootstrap</p>
               <a
                 class="link"
@@ -119,7 +119,7 @@
                 alt="magic8 ball game thumb"
                 class="card__image"
               />
-              <h2 class="card__title">React Weather App</h2>
+              <h2 class="card__title">Realtime Weather App</h2>
               <p>
                 Built with React.js <br />
                 and<br />
