--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,10 @@
                 alt="baking website thumb"
                 class="card__image"
               />
-              <h2 class="card__title">Small Businesses</h2>
+              <h2 class="card__title">
+                Small <br />
+                Businesses
+              </h2>
               <p>Built with React.js, React-bootstrap</p>
               <a
                 class="link"
