--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
               />
               <h2 class="card__title">
                 Small <br />
-                Businesses
+                Business
               </h2>
               <p>Built with React.js, React-bootstrap</p>
               <a
