Added new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,16 +51,74 @@
           <p>See some of my projects below.</p>
           <br />
           <p>
-            I'm working at the moment on my new website using
-            <em>React.js</em> and other <em>commercial projects</em>.
+            I'm currently revamping my website with
+            <em><b>React.js</b></em> using Vitejs, Framer Motion and Sanity.
           </p>
           <br />
         </div>
+
         <div class="portfolio__grid">
           <div class="card-wrapper">
             <div class="card">
               <img
-                src="assets/img/project-img/mbakes-LG.JPG"
+                src="assets/img/project-img/portfolio-23.jpeg"
+                alt="new Portfolio thumb"
+                class="card__image"
+              />
+              <h2 class="card__title">New Portfolio <br />coming soon</h2>
+              <p class="tech">
+                <span>ReactJS</span> <span>Vitejs</span> <span>Sass</span>
+              </p>
+              <div class="card__link"></div>
+            </div>
+
+            <div class="card">
+              <img
+                src="assets/img/project-img/GPT-3-small.jpeg"
+                alt="GPT-3 modern UI/UX thumb"
+                class="card__image"
+              />
+              <h2 class="card__title">
+                GPT-3 <br />
+                Modern UI/UX
+              </h2>
+              <p class="tech">
+                <span>ReactJS</span>
+              </p>
+              <a
+                class="link"
+                href="https://gpt3.aryvidot.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+              <div class="card__link"></div>
+            </div>
+
+            <div class="card">
+              <img
+                src="assets/img/project-img/Resto-small.jpeg"
+                alt="Restaurant modern UI/UX thumb"
+                class="card__image"
+              />
+              <h2 class="card__title">
+                Gerítch <br />
+                Modern UI/UX
+              </h2>
+              <p class="tech">
+                <span>ReactJS</span>
+              </p>
+              <a
+                class="link"
+                href="https://restaurant.aryvidot.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+              <div class="card__link"></div>
+            </div>
+
+            <div class="card">
+              <img
+                src="assets/img/project-img/mbakes-LG.jpg"
                 alt="baking website thumb"
                 class="card__image"
               />
@@ -68,7 +126,9 @@
                 Small <br />
                 Business
               </h2>
-              <p>Built with React.js, React-bootstrap</p>
+              <p class="tech">
+                <span>ReactJS</span> <span>React-Boostrap</span>
+              </p>
               <a
                 class="link"
                 href="https://av-mbakes.netlify.app/"
@@ -85,9 +145,10 @@
                 class="card__image"
               />
               <h2 class="card__title">Commercial</h2>
-              <p>
-                Website built with html, Sass CSS compiler & Vanilla Javascript
+              <p class="tech">
+                <span>HTML</span> <span>Sass</span> <span>JavaScript</span>
               </p>
+
               <a
                 class="link"
                 href="https://lexipearson-personalcoach.netlify.app/"
@@ -103,51 +164,14 @@
                 alt="Sunnyside Agency thumbnail"
                 class="card__image"
               />
-              <h2 class="card__title">Marketing Agency Landing Page</h2>
-              <p>
-                Website built with html, Sass CSS compiler & Vanilla Javascript
+              <h2 class="card__title">Landing Page</h2>
+
+              <p class="tech">
+                <span>HTML</span> <span>Sass</span> <span>JavaScript</span>
               </p>
               <a
                 class="link"
                 href="https://av-sunnyside-agency-lp.netlify.app/"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <div class="card__link"></div>
-            </div>
-
-            <div class="card">
-              <img
-                src="assets/img/project-img/weatherApp-LG.JPG"
-                alt="magic8 ball game thumb"
-                class="card__image"
-              />
-              <h2 class="card__title">Realtime Weather App</h2>
-              <p>
-                Built with React.js <br />
-                and<br />
-                access to API
-              </p>
-              <a
-                class="link"
-                href="https://github.com/AryVidot/weatherReact"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <div class="card__link"></div>
-            </div>
-
-            <div class="card">
-              <img
-                src="assets/img/project-img/MindFullCreation-Small.jpg"
-                alt="MindFullCreation thumbnail"
-                class="card__image"
-              />
-              <h2 class="card__title">Brewing...</h2>
-              <p>Artiste's website using Sanity headless CMS, react.js</p>
-              <a
-                class="link"
-                href="https://www.instagram.com/themindfullcreation/"
                 target="_blank"
                 rel="noopener noreferrer"
               ></a>
@@ -163,7 +187,7 @@
     <footer>
       <div class="copyright">
         <p>
-          <span class="year">2020</span> -
+          <span class="year">2023</span> -
           <a href="index.html" target="_blank">Ary Vidot</a
           ><span class="dot">.</span> All rights reserved
         </p>
